--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "electron-test",
   "version": "1.0.0",
   "description": "electron test app",
-  "main": "index.js",
+  "main": "js/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "author": "Leonardo Lira Becerra",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "electron": "^1.8.4"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1"
   }
 }
